--- a/env.sample
+++ b/env.sample
@@ -1,2 +1,2 @@
 PORT = 3000
-MEXICAN_PNM_URL = https://sns.ift.org.mx:8081/sns-frontend/planes-numeracion/descarga-publica.xhtml
+MEXICAN_PNN_FILENAME = pnn_Publico_Latest.csv
